cmake_minimum_required(VERSION 3.15)
project(stb C CXX)

option(STB_ENABLE_C_LEXER               "stb_c_lexer"               OFF)
option(STB_ENABLE_CONNECTED_COMPONENTS  "stb_connected_components"  OFF)
option(STB_ENABLE_DIVIDE                "stb_divide"                OFF)
option(STB_ENABLE_DS                    "stb_ds"                    OFF)
option(STB_ENABLE_DXT                   "stb_dxt"                   OFF)
option(STB_ENABLE_EASY_FONT             "stb_easy_font"             OFF)
option(STB_ENABLE_HEXWAVE               "stb_hexwave"               OFF)
option(STB_ENABLE_HERRINGBONE_WANG_TILE "stb_herringbone_wang_tile" OFF)
option(STB_ENABLE_IMAGE                 "stb_image"                 OFF)
option(STB_ENABLE_IMAGE_RESIZE          "stb_image_resize2"         OFF)
option(STB_ENABLE_IMAGE_WRITE           "stb_image_write"           OFF)
option(STB_ENABLE_INCLUDE               "stb_include"               OFF)
option(STB_ENABLE_LEAKCHECK             "stb_leakcheck"             OFF)
option(STB_ENABLE_PERLIN                "stb_perlin"                OFF)
option(STB_ENABLE_RECT_PACK             "stb_rect_pack"             OFF)
option(STB_ENABLE_SPRINTF               "stb_sprintf"               OFF)
option(STB_ENABLE_TEXTEDIT              "stb_textedit"              OFF)
option(STB_ENABLE_TRUETYPE              "stb_truetype"              OFF)
option(STB_ENABLE_VORBIS                "stb_vorbis"                OFF)
option(STB_ENABLE_VOXEL_RENDER          "stb_voxel_render"          OFF)
option(STB_ENABLE_TILEMAP_EDITOR        "stb_tilemap_editor"        OFF)

set(STB_GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/stb_impl")
file(MAKE_DIRECTORY "${STB_GENERATED_DIR}")

set(STB_SOURCES "")
set(STB_HEADERS "")
set(STB_COMPILE_DEFS "")

# Writes a minimal translation unit that fires the impl guard, then 
# appends it to STB_SOURCES.
function(generate_impl stem impl_define)
    cmake_parse_arguments(GI "" "LANG" "" ${ARGN})
    if(NOT GI_LANG)
        set(GI_LANG C)
    endif()

    if(GI_LANG STREQUAL "C")
        set(ext "c")
    else()
        set(ext "cpp")
    endif()

    set(out "${STB_GENERATED_DIR}/${stem}_impl.${ext}")
    file(WRITE "${out}" "/* Auto-generated by CMake — do not edit */\n"
                        "#define ${impl_define}\n"
                        "#include \"${stem}.h\"\n")
    set(STB_SOURCES ${STB_SOURCES} "${out}" PARENT_SCOPE)
endfunction()

if(STB_ENABLE_C_LEXER)
    generate_impl(stb_c_lexer STB_C_LEXER_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_c_lexer.h)
endif()

if(STB_ENABLE_CONNECTED_COMPONENTS)
    generate_impl(stb_connected_components STBCC_GRID_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_connected_components.h)
endif()

if(STB_ENABLE_DIVIDE)
    generate_impl(stb_divide STB_DIVIDE_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_divide.h)
endif()

if(STB_ENABLE_DS)
    generate_impl(stb_ds STB_DS_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_ds.h)
endif()

if(STB_ENABLE_DXT)
    generate_impl(stb_dxt STB_DXT_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_dxt.h)
endif()

if(STB_ENABLE_EASY_FONT)
    generate_impl(stb_easy_font STB_EASY_FONT_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_easy_font.h)
endif()

if(STB_ENABLE_HEXWAVE)
    generate_impl(stb_hexwave STB_HEXWAVE_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_hexwave.h)
endif()

if(STB_ENABLE_HERRINGBONE_WANG_TILE)
    generate_impl(stb_herringbone_wang_tile STB_HERRINGBONE_WANG_TILE_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_herringbone_wang_tile.h)
endif()

if(STB_ENABLE_IMAGE)
    generate_impl(stb_image STB_IMAGE_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_image.h)
endif()

if(STB_ENABLE_IMAGE_RESIZE)
    generate_impl(stb_image_resize2 STB_IMAGE_RESIZE_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_image_resize2.h)
endif()

if(STB_ENABLE_IMAGE_WRITE)
    generate_impl(stb_image_write STB_IMAGE_WRITE_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_image_write.h)
endif()

if(STB_ENABLE_INCLUDE)
    generate_impl(stb_include STB_INCLUDE_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_include.h)
endif()

if(STB_ENABLE_LEAKCHECK)
    generate_impl(stb_leakcheck STB_LEAKCHECK_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_leakcheck.h)
endif()

if(STB_ENABLE_PERLIN)
    generate_impl(stb_perlin STB_PERLIN_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_perlin.h)
endif()

if(STB_ENABLE_RECT_PACK)
    generate_impl(stb_rect_pack STB_RECT_PACK_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_rect_pack.h)
endif()

if(STB_ENABLE_SPRINTF)
    generate_impl(stb_sprintf STB_SPRINTF_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_sprintf.h)
endif()

if(STB_ENABLE_TRUETYPE)
    generate_impl(stb_truetype STB_TRUETYPE_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_truetype.h)
endif()

if(STB_ENABLE_TRUETYPE)
    generate_impl(stb_textedit STB_TEXTEDIT_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_textedit.h)
endif()

if(STB_ENABLE_VORBIS)
    # stb_vorbis ships as a .c file rather than a header-only lib, so we
    # compile it directly instead of generating a wrapper.
    list(APPEND STB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/stb_vorbis.c")
    list(APPEND STB_HEADERS stb_vorbis.c)   # consumers #include this too
endif()

if(STB_ENABLE_VOXEL_RENDER)
    generate_impl(stb_voxel_render STB_VOXEL_RENDER_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_voxel_render.h)
endif()

if(STB_ENABLE_TILEMAP_EDITOR)
    generate_impl(stb_tilemap_editor STB_TILEMAP_EDITOR_IMPLEMENTATION)
    list(APPEND STB_HEADERS stb_tilemap_editor.h)
endif()

if(NOT STB_SOURCES)
    message(WARNING
        "[stb] No features enabled — building an interface-only target.\n"
        "Pass e.g. -DENABLE_IMAGE=ON -DSTB_ENABLE_PERLIN=ON to cmake.")
    add_library(stb INTERFACE)
    target_include_directories(stb INTERFACE
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
        "$<INSTALL_INTERFACE:include/stb>")
else()
    add_library(stb STATIC ${STB_SOURCES})

    target_include_directories(stb
        PUBLIC
            "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
            "$<BUILD_INTERFACE:${STB_GENERATED_DIR}>"
            "$<INSTALL_INTERFACE:include/stb>")

    set_target_properties(stb PROPERTIES
        C_STANDARD   11
        C_EXTENSIONS OFF)

    # Suppress common stb warnings
    if(MSVC)
        target_compile_options(stb PRIVATE /W0)
    else()
        target_compile_options(stb PRIVATE
            -w
            # stb_image uses pointer arithmetic GCC/Clang warn about at -Wall
            -Wno-sign-compare)
    endif()

    if(UNIX AND NOT APPLE)
        # stb_image_write uses fopen, stb_include uses realpath etc.
        target_link_libraries(stb PUBLIC m)
    endif()
endif()

include(GNUInstallDirs)

install(TARGETS stb
    EXPORT  stbTargets
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")

install(FILES ${STB_HEADERS}
    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/stb")

install(EXPORT stbTargets
    FILE      stbTargets.cmake
    NAMESPACE stb::
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/stb")

message(STATUS "[stb] Enabled modules:")
foreach(hdr IN LISTS STB_HEADERS)
    message(STATUS "  ${hdr}")
endforeach()
